# oreacle-bot

./: .env  .env.example  .env.sample  GITHUB_ACTIONS_SETUP.md  IMPROVEMENTS.md  Makefile  README.md  phrasebook.yml  pyproject.toml  requirements.txt  test_byd_manual.py  test_byd_mock.py  test_byd_production.py  test_pdf_direct.py
.github/workflows/: monitor.yml  test.yml
oreacle_bot/: __init__.py  classify.py  cli.py  client.py  comment_renderer.py  llm_client.py  models.py  monitor.py  monitor_single.py  prefilter.py  storage.py  translate.py
oreacle_bot/sources/: __init__.py  szse.py
oreaclebot/: __init__.py  cli.py  ladder.py  llm_client.py  monitor.py  sheets_sink.py
oreaclebot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
oreaclebot/sentinels/: __init__.py  byd_monthly.py
oreaclebot/sources/: cninfo.py
src/: client.py  comment_renderer.py  decision.py  llm_client.py  main.py  models.py  monitor.py  storage.py  translate.py
src/sources/: cninfo.py  jiangxi.py  szse.py
src/tmp/: oreacle.db-shm  oreacle.db-wal
tests/: __init__.py  test_client.py  test_ladder.py  test_manifold_integration.py  test_mikhailtal_markets.py  test_models.py  test_sheets_sink.py  test_trading.py
tmp/: oreacle.db
